--- a/ex.html
+++ b/ex.html
@@ -9,7 +9,7 @@
     </head>
     <body onload="init()">
 		<nav class="navbar navbar-dark bg-dark">
-            <span class="navbar-brand mb-0 h1">Zakaria FAHRAOUI</span>
+            <span class="navbar-brand mb-0 h1">Table with options/span>
 
             <form class="form-inline" onkeyup="filterTableau()">
                 <input class="form-control mr-sm-2" type="text" placeholder="Recherche"  id="filterword" name="filterword">
